--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,11 @@
 {
   "Тестовый пример": "Тестовый пример",
   "Перевод": "Перевод",
-  "Язык": "Русский"
+  "Язык": "Русский",
+  "Страница не найдена": "Страница не найдена",
+  "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+  "Обновить страницу": "Обновить страницу",
+  "Throw error": "Вызвать ошибку",
+  "An unexpected error occurred": "Произошла непредвиденная ошибка",
+  "Update page": "Обновить страницу"
 }
