fix Button.tsx and lint errors

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,5 +7,7 @@
   "Обновить страницу": "Обновить страницу",
   "Throw error": "Вызвать ошибку",
   "An unexpected error occurred": "Произошла непредвиденная ошибка",
-  "Update page": "Обновить страницу"
+  "Update page": "Обновить страницу",
+  "Home": "Главная",
+  "About": "О сайте"
 }
