--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,7 @@
   "Страница не найдена": "Page not found",
   "Throw error": "Throw error",
   "An unexpected error occurred": "An unexpected error occurred",
-  "Update page": "Update page"
+  "Update page": "Update page",
+  "Home": "Home",
+  "About": "About"
 }
