change header, add modal and portal

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,5 +8,6 @@
   "An unexpected error occurred": "An unexpected error occurred",
   "Update page": "Update page",
   "Home": "Home",
-  "About": "About"
+  "About": "About",
+  "Login": "Login"
 }
