--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -10,5 +10,6 @@
   "An unexpected error occurred": "Произошла непредвиденная ошибка",
   "Update page": "Обновить страницу",
   "Home": "Главная",
-  "About": "О сайте"
+  "About": "О сайте",
+  "Login": "Войти"
 }
