--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,5 +11,7 @@
   "Update page": "Обновить страницу",
   "Home": "Главная",
   "About": "О сайте",
-  "Login": "Войти"
+  "Login": "Войти",
+  "username": "логин",
+  "password": "пароль"
 }
