--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -2,5 +2,9 @@
   "Profile": "Профиль",
   "Edit": "Редактировать",
   "Your first name": "Ваше имя",
-  "Your last name": "Ваша фамилия"
+  "Your last name": "Ваша фамилия",
+  "Server error": "Ошибка сервера",
+  "Try to reload page...": "Попробуйте обновить страницу",
+  "Cancel": "Отменить",
+  "Save": "Сохранить"
 }
